cmake_minimum_required(VERSION 3.25)
project(graph_puzzle_game_oysolak)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/Array)
include_directories(src/Array/DartsGame)
include_directories(src/Array/Graph)
include_directories(src/Array/Heap)
include_directories(src/Array/MathematicalExpression)
include_directories(src/Array/Sort)
include_directories(src/General)
include_directories(src/List)
include_directories(src/List/Graph)
include_directories(src/List/Polynomial)
include_directories(src/Tree)

add_executable(graph_puzzle_game_oysolak
        src/Array/DartsGame/Element.cpp
        src/Array/DartsGame/Element.h
        src/Array/DartsGame/Queue.cpp
        src/Array/DartsGame/Queue.h
        src/Array/DartsGame/State.cpp
        src/Array/DartsGame/State.h
        src/Array/DartsGame/Test.cpp
        src/Array/Graph/Graph.cpp
        src/Array/Graph/Graph.h
        src/Array/Heap/DHeap.cpp
        src/Array/Heap/DHeap.h
        src/Array/Heap/Heap.cpp
        src/Array/Heap/Heap.h
        src/Array/Heap/HeapNode.cpp
        src/Array/Heap/HeapNode.h
        src/Array/Heap/MaxDHeap.cpp
        src/Array/Heap/MaxDHeap.h
        src/Array/Heap/MaxHeap.cpp
        src/Array/Heap/MaxHeap.h
        src/Array/Heap/MinDHeap.cpp
        src/Array/Heap/MinDHeap.h
        src/Array/Heap/MinHeap.cpp
        src/Array/Heap/MinHeap.h
        src/Array/MathematicalExpression/Element.cpp
        src/Array/MathematicalExpression/Element.h
        src/Array/MathematicalExpression/Evaluate.cpp
        src/Array/MathematicalExpression/Stack.cpp
        src/Array/MathematicalExpression/Stack.h
        src/Array/MathematicalExpression/Token.cpp
        src/Array/MathematicalExpression/Token.h
        src/Array/MathematicalExpression/TokenType.h
        src/Array/Sort/BubbleSort.cpp
        src/Array/Sort/BubbleSort.h
        src/Array/Sort/BucketSort.cpp
        src/Array/Sort/BucketSort.h
        src/Array/Sort/HeapSort.cpp
        src/Array/Sort/HeapSort.h
        src/Array/Sort/InsertionSort.cpp
        src/Array/Sort/InsertionSort.h
        src/Array/Sort/MergeSort.cpp
        src/Array/Sort/MergeSort.h
        src/Array/Sort/QuickSort.cpp
        src/Array/Sort/QuickSort.h
        src/Array/Sort/SelectionSort.cpp
        src/Array/Sort/SelectionSort.h
        src/Array/Sort/ShellSort.cpp
        src/Array/Sort/ShellSort.h
        src/Array/Sort/Sort.h
        src/Array/DisjointSet.cpp
        src/Array/DisjointSet.h
        src/Array/Element.cpp
        src/Array/Element.h
        src/Array/Hash.cpp
        src/Array/Hash.h
        src/Array/Queue.cpp
        src/Array/Queue.h
        src/Array/Set.cpp
        src/Array/Set.h
        src/Array/Stack.cpp
        src/Array/Stack.h
        src/General/AbstractGraph.cpp
        src/General/AbstractGraph.h
        src/General/Path.cpp
        src/General/Path.h
        src/List/Graph/Edge.cpp
        src/List/Graph/Edge.h
        src/List/Graph/EdgeList.cpp
        src/List/Graph/EdgeList.h
        src/List/Graph/Graph.cpp
        src/List/Graph/Graph.h
        src/List/Polynomial/Polynomial.cpp
        src/List/Polynomial/Polynomial.h
        src/List/Polynomial/Term.cpp
        src/List/Polynomial/Term.h
        src/List/Polynomial/TermNode.cpp
        src/List/Polynomial/TermNode.h
        src/List/Polynomial/TestPolynomial.cpp
        src/List/DoublyLinkedList.cpp
        src/List/DoublyLinkedList.h
        src/List/DoublyNode.cpp
        src/List/DoublyNode.h
        src/List/Hash.cpp
        src/List/Hash.h
        src/List/LinkedList.cpp
        src/List/LinkedList.h
        src/List/Node.cpp
        src/List/Node.h
        src/List/Queue.cpp
        src/List/Queue.h
        src/List/Stack.cpp
        src/List/Stack.h
        src/Tree/AvlTree.cpp
        src/Tree/AvlTree.h
        src/Tree/AvlTreeNode.cpp
        src/Tree/AvlTreeNode.h
        src/Tree/BTree.cpp
        src/Tree/BTree.h
        src/Tree/BTreeNode.cpp
        src/Tree/BTreeNode.h
        src/Tree/Element.cpp
        src/Tree/Element.h
        src/Tree/Queue.cpp
        src/Tree/Queue.h
        src/Tree/Stack.cpp
        src/Tree/Stack.h
        src/Tree/Tree.cpp
        src/Tree/Tree.h
        src/Tree/TreeNode.cpp
        src/Tree/TreeNode.h src/main.cpp src/main.h)
